--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,25 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import "./third_party/normalize.css";
+
+:root {
+  font-family: "Bitter", serif;
+  color: #fff;
+  background-color: #000;
+}
+
+h1 {
+  font-family: "Righteous", sans-serif;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+p {
+  font-family: "Bitter", serif;
+}
+
+.lr-container {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 24px;
 }
