--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -32,3 +32,41 @@
   margin-top: 8px;
   text-align: center;
 }
+
+.tariff {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 820px;
+  margin: 16px auto 0;
+  gap: 36px;
+}
+
+.tariffLeft {
+  display: flex;
+  align-items: flex-end;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media (max-width: 434px) {
+  .tariffLeft {
+    align-items: center;
+  }
+}
+
+.tariffLeft p,
+.tariffRight {
+  margin: 0;
+}
+
+.tariffRight {
+  flex: 2;
+  min-width: 220px;
+}
+
+.price {
+  font-size: 2.5em;
+  font-weight: 700;
+}
