--- a/styles/components/ResultsGrid.module.css
+++ b/styles/components/ResultsGrid.module.css
@@ -1,8 +1,9 @@
 .grid {
   display: grid;
   align-items: center;
+  margin: 48px 0;
   text-align: center;
-  grid-template-columns: 2fr 1fr 3fr 1fr;
+  grid-template-columns: 2fr 1fr 4fr 1fr;
   row-gap: 8px;
 }
 
