--- a/styles/components/ResultsGrid.module.css
+++ b/styles/components/ResultsGrid.module.css
@@ -3,17 +3,21 @@
   align-items: center;
   margin: 48px 0;
   text-align: center;
-  grid-template-columns: 2fr 1fr 4fr 1fr;
-  row-gap: 8px;
+  grid-template-columns: 2fr 1fr repeat(3, 1fr) 1fr;
 }
 
 .header {
   display: contents;
 }
 
-.header > div {
-  padding-bottom: 8px;
-  border-bottom: 1px solid gray;
+.header > * {
+  align-self: end;
+  padding: 8px 0;
+}
+
+.header > *:not(.tophat) {
+  margin-bottom: 8px;
+  border-bottom: 1px solid #888;
 }
 
 .row {
@@ -21,16 +25,12 @@
   cursor: pointer;
 }
 
-.row > .resultsCell {
-  justify-content: space-evenly;
-}
-
-.row > div {
+.row > * {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
-  padding: 4px 0;
+  min-height: 80px;
   background-color: #262626;
 }
 
