--- a/styles/components/ResultsGrid.module.css
+++ b/styles/components/ResultsGrid.module.css
@@ -37,3 +37,13 @@
 .oddRow > div {
   background-color: #3b3b3b;
 }
+
+.action {
+  font-size: 1.2em;
+  padding: 8px;
+  cursor: pointer;
+  color: #fff;
+  border: none;
+  outline: none;
+  background: none;
+}
