--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -4,12 +4,12 @@
   align-items: flex-start;
   flex-direction: column;
   justify-content: center;
-  min-height: 400px;
+  gap: 36px;
+  min-height: 500px;
   margin-top: 48px;
   margin-bottom: 48px;
   background: url("/images/logo_transparent_no_text.png") no-repeat right center;
   background-size: contain;
-  gap: 36px;
 }
 
 .preamble > * {
@@ -36,9 +36,9 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  gap: 36px;
   max-width: 820px;
   margin: 16px auto 0;
-  gap: 36px;
 }
 
 .tariffLeft {
@@ -51,6 +51,13 @@
 
 @media (max-width: 434px) {
   .tariffLeft {
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .preamble {
     align-items: center;
   }
 }
