--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&family=Righteous&display=swap");
 @import "./third_party/normalize.css";
 
 :root {
